--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -94,6 +94,7 @@
                 data : {id:monsterID},
                 success:function(data){
                     $("#"+monsterID).find("input[name='genTime']").val(data.genTime);
+                    $("#"+monsterID).find("input[name='maxTime']").val(data.maxTime);
                     $("#"+monsterID).find(".genTime").text(data.genTimeStr);
                 }
             });
