젠타임 목록 10시간 리스트 추가

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -27,6 +27,7 @@
         <a href="/genTermList?genTerm=240" id="genTerm240" class="list-group-item list-group-item-action">4시간 젠</a>
         <a href="/genTermList?genTerm=300" id="genTerm300" class="list-group-item list-group-item-action">5시간 젠</a>
         <a href="/genTermList?genTerm=480" id="genTerm480" class="list-group-item list-group-item-action">8시간 젠</a>
+        <a href="/genTermList?genTerm=600" id="genTerm600" class="list-group-item list-group-item-action">10시간 젠</a>
         <a href="/genTermList?genTerm=720" id="genTerm720" class="list-group-item list-group-item-action">12시간 젠</a>
     </ul>
 </div>
