5초마다 새로고침 테스트

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -91,6 +91,11 @@
             nextMobGen();
         },1000);
 
+        setInterval(function()
+        {
+            location.reload();
+        },5000);
+
 
         if(param == ""){
             $("#totalList").addClass("list-group-item-primary");
