--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -23,12 +23,8 @@
 <div class="container float-left">
     <ul class="list-group list-group-horizontal" style="width:800px; margin:10px 10px;">
         <a href="/{{key}}" id="totalList" class="list-group-item list-group-item-action">전체보기</a>
-        <a href="/{{key}}/genTermList?genTerm=180" id="genTerm180" class="list-group-item list-group-item-action">3시간 젠</a>
-        <a href="/{{key}}/genTermList?genTerm=240" id="genTerm240" class="list-group-item list-group-item-action">4시간 젠</a>
-        <a href="/{{key}}/genTermList?genTerm=300" id="genTerm300" class="list-group-item list-group-item-action">5시간 젠</a>
-        <a href="/{{key}}/genTermList?genTerm=480" id="genTerm480" class="list-group-item list-group-item-action">8시간 젠</a>
-        <a href="/{{key}}/genTermList?genTerm=600" id="genTerm600" class="list-group-item list-group-item-action">10시간 젠</a>
-        <a href="/{{key}}/genTermList?genTerm=720" id="genTerm720" class="list-group-item list-group-item-action">12시간 젠</a>
+        <a href="/{{key}}/mobGroup?mobGroup=1" id="mobGroup1" class="list-group-item list-group-item-action">허상, 비텐</a>
+        <a href="/{{key}}/mobGroup?mobGroup=3" id="mobGroup3" class="list-group-item list-group-item-action">파멸, 화산</a>
     </ul>
 </div>
 <!-- Button trigger modal -->
@@ -81,9 +77,8 @@
 
 </body>
 <script type="text/javascript">
-    var param = "{{genTerm}}";
+    var param = "{{mobGroup}}";
 
-    console.log(param);
     $(document).ready(function(){
         setInterval(function()
         {
@@ -95,7 +90,7 @@
         if(param == ""){
             $("#totalList").addClass("list-group-item-primary");
         }else{
-            $("#genTerm"+param).addClass("list-group-item-primary");
+            $("#mobGroup"+param).addClass("list-group-item-primary");
         }
     });
 
