비텐 일반 네임드 탭 추가

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -22,11 +22,13 @@
 <body>
 <div class="container float-left">
     <ul class="list-group list-group-horizontal" style="width:800px; margin:10px 10px;">
-        <a href="/{{key}}" id="totalList" class="list-group-item list-group-item-action">전체보기</a>
-        <a href="/{{key}}/mobGroup?mobGroup=1" id="mobGroup1" class="list-group-item list-group-item-action">허상, 비텐</a>
-        <a href="/{{key}}/mobGroup?mobGroup=3" id="mobGroup3" class="list-group-item list-group-item-action">파멸, 화산</a>
+        <a href="/{{key}}" id="totalList" class="list-group-item list-group-item-action">불완전 전체보기</a>
+        <a href="/{{key}}/mobGroup?mobGroup=1" id="mobGroup1" class="list-group-item list-group-item-action">허상, 비텐 불완전</a>
+        <a href="/{{key}}/mobGroup?mobGroup=3" id="mobGroup3" class="list-group-item list-group-item-action">파멸, 화산 불완전</a>
+        <a href="/{{key}}/generalNamed?mobGroup=1" id="mobGroup1Gnrl" class="list-group-item list-group-item-action">비텐 일반네임드</a>
     </ul>
 </div>
+
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" style="margin-top:15px;">허상 파랭이 위치 보기</button>
 
