이벤트몹 삭제

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -27,7 +27,7 @@
         <a href="/{{key}}/mobGroup?mobGroup=3" id="mobGroup3" class="list-group-item list-group-item-action">파멸, 화산 불완전</a>
         <a href="/{{key}}/generalNamed?mobGroup=2" id="mobGroup2Gnrl" class="list-group-item list-group-item-action">허상 일반네임드</a>
         <a href="/{{key}}/generalNamed?mobGroup=1" id="mobGroup1Gnrl" class="list-group-item list-group-item-action">비텐 일반네임드</a>
-        <a href="/{{key}}/eventMob" id="mobGroupEvent" class="list-group-item list-group-item-action">이벤트 몹</a>
+        <!--<a href="/{{key}}/eventMob" id="mobGroupEvent" class="list-group-item list-group-item-action">이벤트 몹</a>-->
     </ul>
 </div>
 
