--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -21,18 +21,17 @@
 </head>
 <body>
 <div class="container float-left">
-    <ul class="list-group list-group-horizontal" style="width:800px; margin:10px 10px;">
+    <ul class="list-group list-group-horizontal" style="width:1200px; margin:10px 10px;">
         <a href="/{{key}}" id="totalList" class="list-group-item list-group-item-action">불완전 전체보기</a>
         <a href="/{{key}}/mobGroup?mobGroup=1" id="mobGroup1" class="list-group-item list-group-item-action">허상, 비텐 불완전</a>
         <a href="/{{key}}/mobGroup?mobGroup=3" id="mobGroup3" class="list-group-item list-group-item-action">파멸, 화산 불완전</a>
         <a href="/{{key}}/generalNamed?mobGroup=2" id="mobGroup2Gnrl" class="list-group-item list-group-item-action">허상 일반네임드</a>
         <a href="/{{key}}/generalNamed?mobGroup=1" id="mobGroup1Gnrl" class="list-group-item list-group-item-action">비텐 일반네임드</a>
         <!--<a href="/{{key}}/eventMob" id="mobGroupEvent" class="list-group-item list-group-item-action">이벤트 몹</a>-->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" style="width:1000px;">허상 파랭이 위치</button>
+        {{#if user.admin}}<button type="button" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-xl2" style="width:1000px;">사용자 기록 보기</button>{{/if}}
     </ul>
 </div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" style="margin-top:15px;">허상 파랭이 위치 보기</button>
 
     <!-- 목록 출력 영역 -->
     <table class="table table-horizontal table-bordered">
@@ -71,6 +70,29 @@
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
            <img src="/image/lib/namedMobLocation.jpg" />
+        </div>
+    </div>
+</div>
+<div class="modal fade bd-example-modal-xl2" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <!-- 목록 출력 영역 -->
+            <table class="table table-horizontal table-bordered">
+                <thead class="thead-strong">
+                <tr>
+                    <th style="width:150px;">닉네임</th>
+                    <th style="width:150px;">최근 접속 시간</th>
+                </tr>
+                </thead>
+                <tbody id="tbody">
+                {{#users}}
+                    <tr class="monsterGenTime" id="{{id}}">
+                        <td style="width:150px;">{{userName}}   <!--{{#if mobType}} <span class="badge badge-pill badge-dark">불완전</span>{{/if}}-->  {{#if channel}} <span class="badge badge-warning">{{channel}}채널</span>{{/if}}</td>
+                        <td style="width:150px;">{{lastAccessTime}}</td>
+                    </tr>
+                {{/users}}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
