--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -21,6 +21,11 @@
 </head>
 <body>
 <div class="container float-left">
+    <div class="btn-group" role="group" aria-label="Basic example" style="margin:10px 10px;">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">허상 파랭이 위치</button>
+        <button type="button" class="btn btn-warning" onclick="clearLostStatus();">미아상태 정리하기</button>
+        {{#if user.admin}}<button type="button" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-xl2">사용자 기록 보기</button>{{/if}}
+    </div>
     <ul class="list-group list-group-horizontal" style="width:1200px; margin:10px 10px;">
         <a href="/{{key}}" id="totalList" class="list-group-item list-group-item-action">불완전 전체보기</a>
         <a href="/{{key}}/mobGroup?mobGroup=1" id="mobGroup1" class="list-group-item list-group-item-action">허상, 비텐 불완전</a>
@@ -28,8 +33,7 @@
         <a href="/{{key}}/generalNamed?mobGroup=2" id="mobGroup2Gnrl" class="list-group-item list-group-item-action">허상 일반네임드</a>
         <a href="/{{key}}/generalNamed?mobGroup=1" id="mobGroup1Gnrl" class="list-group-item list-group-item-action">비텐 일반네임드</a>
         <!--<a href="/{{key}}/eventMob" id="mobGroupEvent" class="list-group-item list-group-item-action">이벤트 몹</a>-->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" style="width:1000px;">허상 파랭이 위치</button>
-        {{#if user.admin}}<button type="button" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-xl2" style="width:1000px;">사용자 기록 보기</button>{{/if}}
+
     </ul>
 </div>
 
@@ -141,6 +145,7 @@
             if(now > maxTime){
                 obj.removeClass("text-primary");
                 obj.removeClass("text-danger");
+
                 obj.text("미아 상태");
             }else{
                 obj.removeClass("text-danger");
@@ -158,6 +163,16 @@
 
 
 
+    }
+
+    function clearLostStatus(){
+        $.ajax({
+            url : '/clearLostStatus',
+            type : 'post',
+            success:function(){
+                location.reload();
+            }
+        })
     }
 
     function monsterCut(monsterID){
