젠시간별 쿼리 수정

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -117,14 +117,14 @@
 <div class="modal fade bd-example-modal-xl4" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
-            <img src="/image/lib/namedMobLocation2.jpg" />
+            <img src="/image/lib/namedMobLocation2.png" />
         </div>
     </div>
 </div>
 <div class="modal fade bd-example-modal-xl5" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
-            <img src="/image/lib/namedMobLocation3.jpg" />
+            <img src="/image/lib/namedMobLocation3.png" />
         </div>
     </div>
 </div>
